@startuml
skinparam Shadowing false
skinparam DefaultFontName Arial
skinparam BackgroundColor white
skinparam ArrowColor #4B5563

hide empty methods
skinparam classAttributeIconSize 0
left to right direction
title CD-07 - Inventory và Purchasing
caption Mô tả lớp quản lý nguyên liệu, biến động tồn kho, nhà cung cấp, purchase order, purchase receipt và\ncác line item.
skinparam class {
  BackgroundColor white
  BorderColor #374151
  ArrowColor #4B5563
  HeaderBackgroundColor #E5EEF9
}

class "Branch" as Branch <<entity>> {
  {static} table = branches
  --
  branch_id
  row_version
  branch_code
  business_hours
  closure_windows
  booking_policy
  currency
}

class "User" as User <<entity>> {
  {static} table = users
  --
  user_id
  role_id
  current_tier_id
  row_version
  privacy_anonymized_at
  username
  full_name
}

class "Ingredient" as Ingredient <<entity>> {
  {static} table = ingredients
  --
  ingredient_id
  unit_code
  name
  created_at
  updated_at
  code
  description
}

class "IngredientStockMovement" as IngredientStockMovement <<ledger>> {
  {static} table = ingredient_stock_movements
  --
  movement_id
  ingredient_id
  branch_id
  created_by
  unit_code
  reference_id
  created_at
}

class "Supplier" as Supplier <<entity>> {
  {static} table = suppliers
  --
  supplier_id
  name
  phone
  email
  created_at
  updated_at
  code
}

class "PurchaseOrder" as PurchaseOrder <<entity>> {
  {static} table = purchase_orders
  --
  purchase_order_id
  supplier_id
  branch_id
  created_by
  updated_by
  purchase_order_status
  order_code
}

class "PurchaseOrderLine" as PurchaseOrderLine <<pivot>> {
  {static} table = purchase_order_lines
  --
  po_line_id
  purchase_order_id
  ingredient_id
  unit_code
  created_at
  updated_at
  ordered_quantity
}

class "PurchaseReceipt" as PurchaseReceipt <<entity>> {
  {static} table = purchase_receipts
  --
  receipt_id
  purchase_order_id
  branch_id
  created_by
  receipt_status
  receipt_code
  received_at
}

class "PurchaseReceiptLine" as PurchaseReceiptLine <<pivot>> {
  {static} table = purchase_receipt_lines
  --
  receipt_line_id
  receipt_id
  purchase_order_line_id
  ingredient_id
  stock_movement_id
  unit_code
  created_at
}

class "AdminInventoryService" as AdminInventoryService <<control>> {
  orchestrates flow
}

class "AdminPurchasingService" as AdminPurchasingService <<control>> {
  orchestrates flow
}

class "InventoryStockMovementService" as InventoryStockMovementService <<control>> {
  orchestrates flow
}

class "OrderItemInventoryConsumptionService" as OrderItemInventoryConsumptionService <<control>> {
  orchestrates flow
}

Ingredient "1" --> "0..*" IngredientStockMovement : stockMovements\nFK: ingredient_id
IngredientStockMovement "0..*" --> "1" Branch : branch\nFK: branch_id
IngredientStockMovement "0..*" --> "1" User : actor\nFK: created_by
Supplier "1" --> "0..*" PurchaseOrder : purchaseOrders\nFK: supplier_id
PurchaseOrder "0..*" --> "1" Branch : branch\nFK: branch_id
PurchaseOrder "1" --> "0..*" PurchaseOrderLine : lines\nFK: purchase_order_id
PurchaseOrder "1" --> "0..*" PurchaseReceipt : receipts\nFK: purchase_order_id
PurchaseOrder "0..*" --> "1" User : creator\nFK: created_by
PurchaseOrder "0..*" --> "1" User : updater\nFK: updated_by
PurchaseOrderLine "0..*" --> "1" Ingredient : ingredient\nFK: ingredient_id
PurchaseOrderLine "1" --> "0..*" PurchaseReceiptLine : receiptLines\nFK: purchase_order_line_id
PurchaseReceipt "0..*" --> "1" Branch : branch\nFK: branch_id
PurchaseReceipt "1" --> "0..*" PurchaseReceiptLine : lines\nFK: receipt_id
PurchaseReceipt "0..*" --> "1" User : creator\nFK: created_by
PurchaseReceiptLine "0..*" --> "1" Ingredient : ingredient\nFK: ingredient_id
PurchaseReceiptLine "0..*" --> "1" IngredientStockMovement : stockMovement\nFK: stock_movement_id
AdminInventoryService ..> Branch : uses
AdminPurchasingService ..> Branch : uses
InventoryStockMovementService ..> Branch : uses
OrderItemInventoryConsumptionService ..> Branch : uses
@enduml
